 $Id: RELEASE_NOTES,v 1.76.2.5 2011/01/18 11:38:59 ak Exp $
 -Id: RELEASE_NOTES,v 1.12 2009/12/01 10:35:23 ak Exp -
 -Id: RELEASE_NOTES,v 1.34 2009/08/27 05:09:04 ak Exp -
-----------------------------------------------------------------------
 ##                                      ##  ##                                     
 ##      ####  ##  ## #####   #### ####  ##  ##  ####  ##  ## ##  ##  ####  #####   
 #####  ##  ## ##  ## ##  ## ##   ##  ## ######     ## ###### ###### ##  ## ##  ##  
 ##  ## ##  ## ##  ## ##  ## ##   ###### ##  ##  ##### ###### ###### ###### ##      
 ##  ## ##  ## ##  ## ##  ## ##   ##     ##  ## ##  ## ##  ## ##  ## ##     ##      
 #####   ####   ##### ##  ##  #### ####  ##  ##  ##### ##  ## ##  ##  ####  ##      

                   BOUNCEHAMMER/RELEASE_NOTES
-----------------------------------------------------------------------
 Copyright (C) 2009-2011 Cubicroot Co. Ltd. ALL RIGHTS RESERVED.
 Developed by Cubicroot Co. Ltd. (http://cubicroot.jp/)
-----------------------------------------------------------------------
 This listing show the release notes of ``BounceHammer'': open-sourced
 Bounce Mail Parser. The list shows the version of BounceHammer engine,
 the version of BounceHammer's configuration file, the date of release,
 and a summary of the changes in that release.  More information about
 BounceHammer is available at http://bouncehammer.jp/ (Japanese).

 Other information is available at the following sites:

  - http://sourceforge.jp/projects/bouncehammer/
  - http://www.ohloh.net/p/bouncehammer
  - http://twitter.com/bouncehammer
-----------------------------------------------------------------------


2.6.3/2.0.0	2011/01/21

  New functionality:
    * New option of bin/datadumper: -f, --frequency.  For example, When
      you specify -f 6, the command show the records which bounced 6 or
      more times.
    * WebUI/Advanced Search: support frequency in search condition.

  Assorted improvements and code cleanup: