@@ -1,4 +1,4 @@
- $Id: RELEASE_NOTES.JA,v 1.52.2.5 2011/01/18 11:39:00 ak Exp $
+ $Id: RELEASE_NOTES.JA,v 1.52.2.6 2011/01/18 23:14:27 ak Exp $
 -----------------------------------------------------------------------
  ##                                      ##  ##                                     
  ##      ####  ##  ## #####   #### ####  ##  ##  ####  ##  ## ##  ##  ####  #####   
@@ -38,6 +38,7 @@
       .jp"は"cellphone"にそれぞれ分類されます。 そしてこの2つのドメイン
       はプロバイダ"vertu"に分類されます。
     * ディズニー携帯のドメイン'disney.ne.jp'は'disney'に分類されます。
+    * @myspace.comと@facebook.comは"webmail"に分類されます。
     * WebUIの改善: 検索結果のページに検索に使用した条件が表示されます。
 
   修正されたバグ
