@@ -1,4 +1,4 @@
-# $Id: 055_mail-group.t,v 1.31.2.2 2011/01/10 08:21:53 ak Exp $
+# $Id: 055_mail-group.t,v 1.31.2.3 2011/01/18 23:14:53 ak Exp $
 #  ____ ____ ____ ____ ____ ____ ____ ____ ____ 
 # ||L |||i |||b |||r |||a |||r |||i |||e |||s ||
 # ||__|||__|||__|||__|||__|||__|||__|||__|||__||
@@ -50,7 +50,7 @@ my $Domains = {
 	'neighbor'	=> [],
 	'webmail'	=> [ qw(aol.com aol.jp gmail.com googlemail.com yahoo.com yahoo.co.jp 
 				hotmail.com windowslive.com mac.com me.com ovi.com excite.com
-				lycos.com lycosmail.com ) ],
+				lycos.com lycosmail.com facebook.com myspace.com) ],
 	'smartphone'	=> [ qw(vertu.me) ],
 	'auwebmail'	=> [ qw( fastmail.net fastmail.fm ) ],
 	'brwebmail'	=> [ qw( bol.com.br ) ],
